--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <version>3.0.0</version>
         <!-- <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
+          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
         </configuration> -->
       </plugin>
     </plugins>
