--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>3.0.0</version>
-        <!-- <configuration>
-          <failOnMissingWebXml>false</failOnMissingWebXml>
-          <webXml>src\main\webapp\WEB-INF\web.xml</webXml>
-        </configuration> -->
+        <configuration>
+          <!-- <failOnMissingWebXml>false</failOnMissingWebXml> -->
+          <webXml>WebContent\WEB-INF\web.xml</webXml>
+        </configuration>
       </plugin>
     </plugins>
-    <resources>
+    <!-- <resources>
       <resource>
         <directory>src/main/java</directory>
         <includes>
@@ -51,6 +51,9 @@
         </includes>
         <filtering>false</filtering>
       </resource>
-    </resources>
+      <resource>
+        <directory>WebContent</directory>
+      </resource>
+    </resources> -->
   </build>
 </project>
